--- a/src/index.html
+++ b/src/index.html
@@ -277,8 +277,8 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2> Python Programming</h2>
-                        <p> The course will help you to get familiar with the different libraries of python and lay a solid foundation in programming.</p> <p>If you have a passion to learn programming, this is the best opportunity for you</p>
+                        <h2>BECOME A PYTHONISTA</h2>
+                        <p> Tech giants like Google, Youtube, IBM have already chosen Python as their core backend. Now imagine your job opportunities as a PYTHONISTA</p> <p>If you have a passion to learn programming, this is the best opportunity for you to get started and become and expert</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-python">Course Contents</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -306,7 +306,8 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h2>Who Should Attend Our Courses and Workshops</h2>
-                        <p>These courses and workshops are for anyone passionate about the world of Machine Learning and Artificial Intelligence and especially fit for those seeking to break into the endless career opportunities of Data Science,ML and AI...</p>
+                        <p>Freshers who needs a career in Python Programming</p>
+                        <p>Individuals who are keen on building a their profession in Python</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -316,49 +317,6 @@
         </div> <!-- end of container -->
     </div> <!-- end of basic-3 -->
     <!-- end of students -->
-
-
-    <!-- Details Learn More -->
-	<div id="details-lightbox" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="container">
-            <div class="row">
-                <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-                <div class="col-lg-8">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/details-lightbox.jpg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-4">
-                    <h3>Artificial Intelligence Workshops</h3>
-                    <hr>
-                    <h5>For AI Enthusiasts</h5>
-                    <p>We provide 5 days Deep Learning course that will make it easy for you to understand deep learning with the help of interesting examples and exercises throughout.</p>
-                    <ul class="list-unstyled li-space-lg">
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">7.5 hours of training </div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Learn from Industry Expert Mentor</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Hands-on experience in ML model implementation</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Model Deployment</div>
-                        </li>
-                        <!-- <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Price : 500 only</div>
-                        </li> -->
-                       <!--  <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Register Now</div>
-                        </li> -->
-                    </ul>
-                    <a class="btn-solid-reg mfp-close page-scroll" href="#register">SIGN UP</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of details learn more -->
 
     <!-- Details Python Learn More -->
     <div id="details-python" class="lightbox-basic zoom-anim-dialog mfp-hide">
@@ -371,22 +329,34 @@
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-4">
-                    <h3>Python Programming</h3>
+                    <h3>PYTHON PROGRAMMING</h3>
                     <hr>
-                    <h5>For Python developers</h5>
-                    <p>The course is beneficial for those who want to explore the domain of Python programming</p>
+                    <h5>COURSE CONTENTS</h5>
+                    <!-- <p>The course is beneficial for those who want to explore the domain of Python programming</p> -->
                     <ul class="list-unstyled li-space-lg">
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">1 Month intense training</div>
+                            <i class="fas fa-square"></i><div class="media-body">Basics of Python</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Learn from Industry Expert Mentor</div>
+                            <i class="fas fa-square"></i><div class="media-body">Data Types</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Deep into OOPs concepts</div>
+                            <i class="fas fa-square"></i><div class="media-body">Functional Programming</div>
                         </li>
                         <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Assignments and Projects for hands-on experience</div>
+                            <i class="fas fa-square"></i><div class="media-body">Modules and Packages</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i><div class="media-body">Object Oriented Python</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i><div class="media-body">Exception Handling</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i><div class="media-body">Addons - Numpy, Pandas, Matplotlib etc</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i><div class="media-body">2 Real World Projects</div>
                         </li>
                         <!-- <li class="media">
                             <i class="fas fa-square"></i><div class="media-body">Price : 500 only</div>
@@ -446,48 +416,7 @@
     <!-- end of details ml learn more -->
 
 
-    <!-- Details ML Learn More -->
-    <div id="details-dl" class="lightbox-basic zoom-anim-dialog mfp-hide">
-        <div class="container">
-            <div class="row">
-                <button title="Close (Esc)" type="button" class="mfp-close x-button">×</button>
-                <div class="col-lg-8">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/details-lightbox.jpg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-4">
-                    <h3>Introduction to Deep learning and Computer Vision</h3>
-                    <hr>
-                    <h5>Master the state of art deep learning models</h5>
-                    <p>Learn AI concepts and practical applications through hands-on sessions in this course</p>
-                    <ul class="list-unstyled li-space-lg">
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">1 Month intense training</div>
-                        </li>
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Learn from Industry Expert Mentor</div>
-                        </li>
-                       <!--  <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Introduction to real world computer vision problems</div>
-                        </li> -->
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">DL concepts and practical implementation</div>
-                        </li>
-                        <!-- <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Price : 500 only</div>
-                        </li> -->
-                        <li class="media">
-                            <i class="fas fa-square"></i><div class="media-body">Be industry ready and build a career in AI</div>
-                        </li>
-                    </ul>
-                    <a class="btn-solid-reg mfp-close page-scroll" href="#register">SIGN UP</a> <a class="btn-outline-reg mfp-close as-button" href="#screenshots">BACK</a>
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of lightbox-basic -->
-    <!-- end of details ml learn more -->
-
+    
 
     <!-- Takeaways -->
     <div class="cards">
@@ -700,7 +629,7 @@
                 </div> <!-- end of col -->
                 <div class="col-md-3">
                     <div class="footer-col third">
-                        <h5>Links</h5>
+ <!--                        <h5>Links</h5>
                         <ul class="list-unstyled li-space-lg p-small">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -713,7 +642,7 @@
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body"><a href="privacy-policy.html">Privacy Policy</a></div>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div> <!-- end of col -->
