--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,8 @@
                         <div class="countdown">
                             <span id="clock"></span>
                         </div>
-                        <h1>FREE upcoming Live Demo Class !!!</h1>
-                        <p class="p-large"> Join our Free Live Demo Session and choose your courses </p>
+                        <h1>FREE Upcoming Live Demo Class !!!</h1>
+                        <p class="p-large"> Join our Free Live Demo Session for Python and then signup for the course <br /> on <b>24th October Saturday at 12 PM</b></p>
                         <a class="btn-solid-lg page-scroll" href="#register">REGISTER</a>
                         <a class="btn-outline-lg page-scroll" href="#instructor">DISCOVER</a>
                     </div> <!-- end of text-container -->
@@ -256,7 +256,7 @@
                                         <img class="img-fluid" src="images/keras.png" alt="alternative">
                                 </div> -->
                                 <div class="swiper-slide">
-                                        <img class="img-fluid" src="images/pandas.png" alt="alternative">
+                                        <img class="img-fluid" src="images/oop.png" alt="alternative">
                                 </div>
                             </div> <!-- end of swiper-wrapper -->
                         </div> <!-- end of swiper container -->
@@ -279,7 +279,7 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h2>BECOME A PYTHONISTA</h2>
-                        <p> Tech giants like Google, Youtube, IBM have already chosen Python as their core backend. Now imagine your job opportunities as a PYTHONISTA</p> <p>If you have a passion to learn programming, this is the best opportunity for you to get started and become and expert</p>
+                        <p> Tech giants like Google, Youtube, IBM have already chosen Python as their core backend. Now imagine your job opportunities as a PYTHONISTA</p> <p>If you have a passion to learn programming, this is the best opportunity for you to get started and become an expert</p>
                         <a class="btn-solid-reg popup-with-move-anim" href="#details-python">Course Contents</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -307,8 +307,11 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h2>Who Should Attend Our Courses and Workshops</h2>
-                        <p>Freshers who needs a career in Python Programming</p>
-                        <p>Individuals who are keen on building a their profession in Python</p>
+                            <ul>
+                                <li>Freshers who needs a career in Python Programming</li>
+                                <li>Individuals who are keen on building a their profession in Python Development</li>
+                                <li>Data Scientists who wants to deep dive into Python from basics to advanced concepts</li>
+                            </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -555,7 +558,9 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-envelope"></i>
-                                <div class="media-body"><a class="light-gray" href="mailto:contact@zigo.com">contact@codingsage.info</a> <i class="fas fa-globe"></i><a class="light-gray" href="#your-link">www.codingsage.info</a></div>
+                                <div class="media-body"><a class="light-gray" href="mailto:contact@zigo.com">contact@codingsage.info</a> 
+                                    <!-- <i class="fas fa-globe"></i><a class="light-gray" href="#your-link">www.codingsage.info</a> -->
+                                    </div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
