--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                 </li>
 
                 <!-- Dropdown Menu -->          
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle page-scroll" href="#date" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">DATE</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="article-details.html"><span class="item-text">ARTICLE DETAILS</span></a>
@@ -80,7 +80,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PRIVACY POLICY</span></a>
                     </div>
-                </li>
+                </li> -->
                 <!-- end of dropdown menu -->
 
                 <li class="nav-item">
@@ -293,11 +293,6 @@
     <!-- end of instructor -->
 
 
-    <!-- Description -->
-    <div id="description" class="basic-2">
-        
-    </div> <!-- end of basic-2 -->
-    <!-- end of description -->
 
 
     <!-- Students -->
@@ -535,8 +530,10 @@
     </div> <!-- end of basic-5 -->
     <!-- end of date -->
 
-
-  <br><br/>
+    <!-- Description -->
+    <div id="description" class="basic-2">
+    </div> <!-- end of basic-2 -->
+    <!-- end of description -->
 
     <!-- Contact -->
     <div id="contact" class="form-3">
